--- a/app/about.html
+++ b/app/about.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="./css/style.min.css" type="text/css">
   <script src="./js/svg.js"></script>
+  <script src="./js/activeTheme.js"></script>
   <link rel="preload" href="./fonts/Roboto-Bold.woff2" type="font/woff2" as="font" crossorigin>
   <link rel="preload" href="./fonts/Roboto-Regular.woff2" type="font/woff2" as="font" crossorigin>
   <title>About</title>
@@ -96,7 +97,7 @@
                   <div class="skill-section__title">Frontend</div>
                   <ul class="skill-section__list">
                     <li class="skill-section__item">
-                      <div class="skill"><svg class="skill__circle" viewBox="0 0 100 100" preserveAspectRatio="none">
+                      <div class="skill"><svg class="skill__circle skill__circle--HTML5" viewBox="0 0 100 100" preserveAspectRatio="none">
                           <circle class="skills__circle-under" cx="50" cy="50" r="40"></circle>
                           <circle class="skills__circle-above" cx="50" cy="50" r="40"></circle>
                         </svg>
@@ -104,7 +105,7 @@
                       </div>
                     </li>
                     <li class="skill-section__item">
-                      <div class="skill"><svg class="skill__circle" viewBox="0 0 100 100" preserveAspectRatio="none">
+                      <div class="skill"><svg class="skill__circle skill__circle--CSS3" viewBox="0 0 100 100" preserveAspectRatio="none">
                           <circle class="skills__circle-under" cx="50" cy="50" r="40"></circle>
                           <circle class="skills__circle-above" cx="50" cy="50" r="40"></circle>
                         </svg>
@@ -112,7 +113,7 @@
                       </div>
                     </li>
                     <li class="skill-section__item">
-                      <div class="skill"><svg class="skill__circle" viewBox="0 0 100 100" preserveAspectRatio="none">
+                      <div class="skill"><svg class="skill__circle skill__circle--JavaScript" viewBox="0 0 100 100" preserveAspectRatio="none">
                           <circle class="skills__circle-under" cx="50" cy="50" r="40"></circle>
                           <circle class="skills__circle-above" cx="50" cy="50" r="40"></circle>
                         </svg>
@@ -127,7 +128,7 @@
                   <div class="skill-section__title">Backend</div>
                   <ul class="skill-section__list">
                     <li class="skill-section__item">
-                      <div class="skill"><svg class="skill__circle" viewBox="0 0 100 100" preserveAspectRatio="none">
+                      <div class="skill"><svg class="skill__circle skill__circle--PHP" viewBox="0 0 100 100" preserveAspectRatio="none">
                           <circle class="skills__circle-under" cx="50" cy="50" r="40"></circle>
                           <circle class="skills__circle-above" cx="50" cy="50" r="40"></circle>
                         </svg>
@@ -135,7 +136,7 @@
                       </div>
                     </li>
                     <li class="skill-section__item">
-                      <div class="skill"><svg class="skill__circle" viewBox="0 0 100 100" preserveAspectRatio="none">
+                      <div class="skill"><svg class="skill__circle skill__circle--mySQL" viewBox="0 0 100 100" preserveAspectRatio="none">
                           <circle class="skills__circle-under" cx="50" cy="50" r="40"></circle>
                           <circle class="skills__circle-above" cx="50" cy="50" r="40"></circle>
                         </svg>
@@ -143,7 +144,7 @@
                       </div>
                     </li>
                     <li class="skill-section__item">
-                      <div class="skill"><svg class="skill__circle" viewBox="0 0 100 100" preserveAspectRatio="none">
+                      <div class="skill"><svg class="skill__circle skill__circle--Node.js &amp; npm" viewBox="0 0 100 100" preserveAspectRatio="none">
                           <circle class="skills__circle-under" cx="50" cy="50" r="40"></circle>
                           <circle class="skills__circle-above" cx="50" cy="50" r="40"></circle>
                         </svg>
@@ -151,7 +152,7 @@
                       </div>
                     </li>
                     <li class="skill-section__item">
-                      <div class="skill"><svg class="skill__circle" viewBox="0 0 100 100" preserveAspectRatio="none">
+                      <div class="skill"><svg class="skill__circle skill__circle--Mongo.db" viewBox="0 0 100 100" preserveAspectRatio="none">
                           <circle class="skills__circle-under" cx="50" cy="50" r="40"></circle>
                           <circle class="skills__circle-above" cx="50" cy="50" r="40"></circle>
                         </svg>
@@ -166,7 +167,7 @@
                   <div class="skill-section__title">WorkFlow</div>
                   <ul class="skill-section__list">
                     <li class="skill-section__item">
-                      <div class="skill"><svg class="skill__circle" viewBox="0 0 100 100" preserveAspectRatio="none">
+                      <div class="skill"><svg class="skill__circle skill__circle--Git" viewBox="0 0 100 100" preserveAspectRatio="none">
                           <circle class="skills__circle-under" cx="50" cy="50" r="40"></circle>
                           <circle class="skills__circle-above" cx="50" cy="50" r="40"></circle>
                         </svg>
@@ -174,7 +175,7 @@
                       </div>
                     </li>
                     <li class="skill-section__item">
-                      <div class="skill"><svg class="skill__circle" viewBox="0 0 100 100" preserveAspectRatio="none">
+                      <div class="skill"><svg class="skill__circle skill__circle--Gulp" viewBox="0 0 100 100" preserveAspectRatio="none">
                           <circle class="skills__circle-under" cx="50" cy="50" r="40"></circle>
                           <circle class="skills__circle-above" cx="50" cy="50" r="40"></circle>
                         </svg>
@@ -182,7 +183,7 @@
                       </div>
                     </li>
                     <li class="skill-section__item">
-                      <div class="skill"><svg class="skill__circle" viewBox="0 0 100 100" preserveAspectRatio="none">
+                      <div class="skill"><svg class="skill__circle skill__circle--Bower" viewBox="0 0 100 100" preserveAspectRatio="none">
                           <circle class="skills__circle-under" cx="50" cy="50" r="40"></circle>
                           <circle class="skills__circle-above" cx="50" cy="50" r="40"></circle>
                         </svg>
@@ -200,9 +201,9 @@
     <footer class="footer">
       <div class="footer__menu">
         <ul class="nav-menu">
-          <li class="nav-menu__item"><a class="nav-menu__link" href="#">Hello Page</a></li>
-          <li class="nav-menu__item"><a class="nav-menu__link" href="#">About Me</a></li>
-          <li class="nav-menu__item"><a class="nav-menu__link" href="#">My Last Works</a></li>
+          <li class="nav-menu__item"><a class="nav-menu__link" href="index.html">Welcome Page</a></li>
+          <li class="nav-menu__item"><a class="nav-menu__link" href="about.html">About Me</a></li>
+          <li class="nav-menu__item"><a class="nav-menu__link" href="works.html">My Last Works</a></li>
         </ul>
       </div>
       <div class="footer__socials">
@@ -216,6 +217,12 @@
         </ul>
       </div>
     </footer>
+  </div>
+  <div class="preloader">
+    <div class="preloader__spinner">
+      <div class="preloader__animation"></div>
+      <div class="preloader__percents">0%</div>
+    </div>
   </div>
   <script src="./js/scripts.min.js"></script>
 </body>
