--- a/app/index.html
+++ b/app/index.html
@@ -57,6 +57,7 @@
       <div class="preloader__percents">0%</div>
     </div>
   </div>
+  <!--script(src="./libs/jQuery/dist/jquery.min.js")-->
   <script src="./js/scripts.min.js"></script>
 </body>
 
