finished triple slider

--- a/app/index.html
+++ b/app/index.html
@@ -34,19 +34,22 @@
         </div>
       </div>
       <div class="auth">
-        <div class="auth__info">
-          <div class="user">
-            <div class="user__photo"><img class="user__avatar" src="img/my.jpg" alt=""></div>
-            <div class="user__name">Yuriy Bochkarev</div>
-            <div class="user__title">My Site Portfolio</div>
-            <div class="auth__socals"><a class="auth__socals--link"><svg class="auth__socials--image auth__socials--github" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="none" viewBox="0 0 30 30">
-                  <use xlink:href="#github"></use>
-                </svg></a><a class="auth__socals--link"><svg class="auth__socials--image auth__socials--upwork_round" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="none" viewBox="0 0 30 30">
-                  <use xlink:href="#upwork_round"></use>
-                </svg></a></div>
+        <div class="auth__side">
+          <div class="auth__info">
+            <div class="user">
+              <div class="user__photo"><img class="user__avatar" src="img/my.jpg" alt=""></div>
+              <div class="user__name">Yuriy Bochkarev</div>
+              <div class="user__title">My Site Portfolio</div>
+              <div class="auth__socals"><a class="auth__socals--link"><svg class="auth__socials--image auth__socials--github" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="none" viewBox="0 0 30 30">
+                    <use xlink:href="#github"></use>
+                  </svg></a><a class="auth__socals--link"><svg class="auth__socials--image auth__socials--upwork_round" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="none" viewBox="0 0 30 30">
+                    <use xlink:href="#upwork_round"></use>
+                  </svg></a></div>
+            </div>
           </div>
+          <div class="auth__btns"><a class="auth__btn" href="works.html">My last Works</a><a class="auth__btn" href="about.html">About Me</a><button class="auth__btn change__btn">Change Theme</button></div>
         </div>
-        <div class="auth__btns"><a class="auth__btn" href="works.html">My last Works</a><a class="auth__btn" href="about.html">About Me</a><button class="auth__btn change__btn">Change Theme</button></div>
+        <div class="auth__side-back"></div>
       </div>
       <div class="auth__login"><button class="auth__login--link"> Authorizations</button></div>
     </div>
