--- a/app/about.html
+++ b/app/about.html
@@ -40,9 +40,13 @@
         <li class="socials__item"><a class="socials__link" href="#"><svg class="socials__image socials__image--upwork" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="none">
               <use xlink:href="#upwork"></use>
             </svg></a></li>
-      </ul><a class="hamburger" href=""><svg class="hamburger__image" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="none" viewBox="0 0 40 35">
-          <use xlink:href="#hamburger"></use>
-        </svg></a><a class="down-arrow" href=""><svg class="down-arrow--image" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="none" viewBox="0 0 25.18 16.164">
+      </ul>
+      <div class="hamburger" tabindex="1"><button class="hamburger__button"></button></div>
+      <ul class="menu-header__list">
+        <li class="menu-header__item"><a class="menu-header__link" href="./index.html">Welcome Page</a></li>
+        <li class="menu-header__item"><a class="menu-header__link" href="./about.html">About Me</a></li>
+        <li class="menu-header__item"><a class="menu-header__link" href="./works.html">My Last Works</a></li>
+      </ul><a class="down-arrow" href=""><svg class="down-arrow--image" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="none" viewBox="0 0 25.18 16.164">
           <use xlink:href="#arrow_down"></use>
         </svg></a>
       <div class="hero__title"><svg class="hero__title--image" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="none" viewBox="0 0 1175.495 313.961">
@@ -201,9 +205,9 @@
     <footer class="footer">
       <div class="footer__menu">
         <ul class="nav-menu">
-          <li class="nav-menu__item"><a class="nav-menu__link" href="index.html">Welcome Page</a></li>
-          <li class="nav-menu__item"><a class="nav-menu__link" href="about.html">About Me</a></li>
-          <li class="nav-menu__item"><a class="nav-menu__link" href="works.html">My Last Works</a></li>
+          <li class="nav-menu__item"><a class="nav-menu__link" href="./index.html">Welcome Page</a></li>
+          <li class="nav-menu__item"><a class="nav-menu__link" href="./about.html">About Me</a></li>
+          <li class="nav-menu__item"><a class="nav-menu__link" href="./works.html">My Last Works</a></li>
         </ul>
       </div>
       <div class="footer__socials">
