--- a/app/about.html
+++ b/app/about.html
@@ -103,7 +103,7 @@
                     <li class="skill-section__item">
                       <div class="skill"><svg class="skill__circle skill__circle--HTML5" viewBox="0 0 100 100" preserveAspectRatio="none">
                           <circle class="skills__circle-under" cx="50" cy="50" r="40"></circle>
-                          <circle class="skills__circle-above" cx="50" cy="50" r="40"></circle>
+                          <circle class="skills__circle-above" cx="50" cy="50" r="40" data-animation="toDasharray"></circle>
                         </svg>
                         <div class="skill__name">HTML5</div>
                       </div>
@@ -111,7 +111,7 @@
                     <li class="skill-section__item">
                       <div class="skill"><svg class="skill__circle skill__circle--CSS3" viewBox="0 0 100 100" preserveAspectRatio="none">
                           <circle class="skills__circle-under" cx="50" cy="50" r="40"></circle>
-                          <circle class="skills__circle-above" cx="50" cy="50" r="40"></circle>
+                          <circle class="skills__circle-above" cx="50" cy="50" r="40" data-animation="toDasharray"></circle>
                         </svg>
                         <div class="skill__name">CSS3</div>
                       </div>
@@ -119,7 +119,7 @@
                     <li class="skill-section__item">
                       <div class="skill"><svg class="skill__circle skill__circle--JavaScript" viewBox="0 0 100 100" preserveAspectRatio="none">
                           <circle class="skills__circle-under" cx="50" cy="50" r="40"></circle>
-                          <circle class="skills__circle-above" cx="50" cy="50" r="40"></circle>
+                          <circle class="skills__circle-above" cx="50" cy="50" r="40" data-animation="toDasharray"></circle>
                         </svg>
                         <div class="skill__name">JavaScript</div>
                       </div>
@@ -134,7 +134,7 @@
                     <li class="skill-section__item">
                       <div class="skill"><svg class="skill__circle skill__circle--PHP" viewBox="0 0 100 100" preserveAspectRatio="none">
                           <circle class="skills__circle-under" cx="50" cy="50" r="40"></circle>
-                          <circle class="skills__circle-above" cx="50" cy="50" r="40"></circle>
+                          <circle class="skills__circle-above" cx="50" cy="50" r="40" data-animation="toDasharray"></circle>
                         </svg>
                         <div class="skill__name">PHP</div>
                       </div>
@@ -142,7 +142,7 @@
                     <li class="skill-section__item">
                       <div class="skill"><svg class="skill__circle skill__circle--mySQL" viewBox="0 0 100 100" preserveAspectRatio="none">
                           <circle class="skills__circle-under" cx="50" cy="50" r="40"></circle>
-                          <circle class="skills__circle-above" cx="50" cy="50" r="40"></circle>
+                          <circle class="skills__circle-above" cx="50" cy="50" r="40" data-animation="toDasharray"></circle>
                         </svg>
                         <div class="skill__name">mySQL</div>
                       </div>
@@ -150,7 +150,7 @@
                     <li class="skill-section__item">
                       <div class="skill"><svg class="skill__circle skill__circle--Node.js &amp; npm" viewBox="0 0 100 100" preserveAspectRatio="none">
                           <circle class="skills__circle-under" cx="50" cy="50" r="40"></circle>
-                          <circle class="skills__circle-above" cx="50" cy="50" r="40"></circle>
+                          <circle class="skills__circle-above" cx="50" cy="50" r="40" data-animation="toDasharray"></circle>
                         </svg>
                         <div class="skill__name">Node.js &amp; npm</div>
                       </div>
@@ -158,7 +158,7 @@
                     <li class="skill-section__item">
                       <div class="skill"><svg class="skill__circle skill__circle--Mongo.db" viewBox="0 0 100 100" preserveAspectRatio="none">
                           <circle class="skills__circle-under" cx="50" cy="50" r="40"></circle>
-                          <circle class="skills__circle-above" cx="50" cy="50" r="40"></circle>
+                          <circle class="skills__circle-above" cx="50" cy="50" r="40" data-animation="toDasharray"></circle>
                         </svg>
                         <div class="skill__name">Mongo.db</div>
                       </div>
@@ -173,7 +173,7 @@
                     <li class="skill-section__item">
                       <div class="skill"><svg class="skill__circle skill__circle--Git" viewBox="0 0 100 100" preserveAspectRatio="none">
                           <circle class="skills__circle-under" cx="50" cy="50" r="40"></circle>
-                          <circle class="skills__circle-above" cx="50" cy="50" r="40"></circle>
+                          <circle class="skills__circle-above" cx="50" cy="50" r="40" data-animation="toDasharray"></circle>
                         </svg>
                         <div class="skill__name">Git</div>
                       </div>
@@ -181,7 +181,7 @@
                     <li class="skill-section__item">
                       <div class="skill"><svg class="skill__circle skill__circle--Gulp" viewBox="0 0 100 100" preserveAspectRatio="none">
                           <circle class="skills__circle-under" cx="50" cy="50" r="40"></circle>
-                          <circle class="skills__circle-above" cx="50" cy="50" r="40"></circle>
+                          <circle class="skills__circle-above" cx="50" cy="50" r="40" data-animation="toDasharray"></circle>
                         </svg>
                         <div class="skill__name">Gulp</div>
                       </div>
@@ -189,7 +189,7 @@
                     <li class="skill-section__item">
                       <div class="skill"><svg class="skill__circle skill__circle--Bower" viewBox="0 0 100 100" preserveAspectRatio="none">
                           <circle class="skills__circle-under" cx="50" cy="50" r="40"></circle>
-                          <circle class="skills__circle-above" cx="50" cy="50" r="40"></circle>
+                          <circle class="skills__circle-above" cx="50" cy="50" r="40" data-animation="toDasharray"></circle>
                         </svg>
                         <div class="skill__name">Bower</div>
                       </div>
